[tool.coverage.run]
branch = true
source = [ "platform_infra_cdk_common" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-report html:'../../../../../coverage/libs/platform/infra/cdk/common/html'
 --cov-report xml:'../../../../../coverage/libs/platform/infra/cdk/common/coverage.xml'
 --html='../../../../../reports/libs/platform/infra/cdk/common/unittests/html/index.html'
 --junitxml='../../../../../reports/libs/platform/infra/cdk/common/unittests/junit.xml'
"""

[project]
name = "platform-infra-cdk-common"
version = "1.0.0"
description = "Common AWS CDK utilities and base classes for Sage infrastructure projects"
requires-python = "==3.13.3"
readme = 'README.md'
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["platform_infra_cdk_common"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
